Integrated with python last years gphoto code to grab images off of the camera

--- a/OBC/gphoto_camera_communication/Makefile
+++ b/OBC/gphoto_camera_communication/Makefile
@@ -1,9 +1,9 @@
 CFLAGS = 
-CXXFLAGS = -I/usr/include/python2.7 -fPIC
+CXXFLAGS = -I/usr/include/python2.7 -fPIC -std=c++11
 
 
-LIBS = -lpthread -lgphoto2 -lpython2.7 -lboost_python-py27
-LINKFLAGS = -shared -Wl,--export-dynamic
+LIBS = -lpthread -lgphoto2 -lboost_python-py27 -lpython2.7
+LINKFLAGS = -shared -Wl,--export-dynamic,-soname,
 HEADERS = CameraControl.h ImageSync.h SharedInfo.h
 OBJ = BoostPythonCPP.o CameraControl.o ImageSync.o SharedInfo.o
 
@@ -15,6 +15,7 @@ all: $(LINK_TARGET)
 
 clean:
 	rm -f $(REBUILDABLES)
+	rm -f *.pyc
 	echo Clean done
 
 cleanobjs:
@@ -22,7 +23,7 @@ cleanobjs:
 	echo Cleaned object files
 
 $(LINK_TARGET): $(OBJ)
-	$(CXX) $(LINKFLAGS) $(LIBS) -o $@ $^
+	$(CXX) $(LINKFLAGS)$(LINK_TARGET) -o $@ $^ $(LIBS)
 	rm -f $(OBJ)
 	echo Done
 
